--- a/package.json
+++ b/package.json
@@ -13,26 +13,29 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "node scripts/release.js"
   },
-  "keywords": [
-    "cli"
-  ],
+  "keywords": ["cli"],
   "author": "trimmer.yang",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.26.1",
     "chalk": "^4.1.2",
     "commander": "^8.3.0",
+    "dependency-tree": "^8.1.2",
     "ejs": "^3.1.6",
     "envinfo": "^7.8.1",
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
     "inquirer": "^8.1.2",
+    "inquirer-fuzzy-path": "^2.3.0",
     "leven": "^3.1.0",
     "listr": "^0.14.3",
     "lodash": "^4.17.21",
     "minimist": "^1.2.5",
     "ncp": "^2.0.0",
+    "npm-cli-login": "^1.0.0",
     "pkg-install": "^1.0.0",
     "prettier": "^2.5.0",
+    "replace-in-file": "^6.3.2",
     "semver": "^7.3.5"
   }
 }
